# BreachLens-Splunk-MCP-SOC-Copilot

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  architecture_diagram.md  docker-compose.yml
apps/breachlens_splunk/default/: app.conf  indexes.conf  inputs.conf  macros.conf  props.conf  savedsearches.conf
apps/breachlens_splunk/default/data/ui/views/: breachlens_overview.xml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  agent.py  config.py  detections.py  domain.py  evidence.py  llm.py  main.py  reports.py  spl.py  splunk_client.py
backend/scripts/: evaluate_ai.py  validate_mcp.py
backend/tests/: test_agent.py  test_detections.py  test_evidence.py  test_reports.py  test_spl.py
docs/: ai_evaluation.md  demo_script.md  devpost_submission.md  hackathon_criteria_review.md  live_validation.md  mcp_live_setup.md  mcp_validation.md  submission_checklist.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json
frontend/src/: App.tsx  styles.css
frontend/tests/: capture-live-screenshot.cjs  live-splunk-check.cjs  smoke.spec.ts
sample_data/: alerts.jsonl  auth.jsonl  cloud.jsonl  edr.jsonl  proxy.jsonl
scripts/: install_splunk_mcp_app.ps1
