[project]
name = "breachlens-backend"
version = "0.1.0"
description = "Evidence-gated Splunk MCP SOC copilot backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
